# Kursach_3_sem-source

./: CMakeLists.txt  Exp.cpp  Exp.h  Meme_Gen.h  Social_Media_TG.h  c_image.cpp  c_image.h  c_text.cpp  c_text.h  color_map.cpp  color_map.h  custom.cpp  custom.h  functions.h  generate_text.cpp  generate_text.h  image_api.cpp  image_api.h  last_action.cpp  last_action.h  main.cpp  overlay.cpp  overlay.h  overlay_api.h  social_media.cpp  social_media.h  telegram.cpp  telegram.h  template.cpp  vk.cpp  vk.h
ImageTestApi/: CMakeLists.txt
TestApiOverlay/: main.cpp
TestTextGenerator/: main.cpp
